# routers/authRouter.js
@@ -1,0 +1,9 @@
+import express from 'express'
+import authController from '../controllers/authController.js'
+const router = express.Router()
+
+router.post('/login', authController.login)
+
+router.post('/register', authController.register)
+
+export default router
