# routers/userRouter.js
@@ -1,9 +1,8 @@
-import express from 'express'
 import userController from '../controllers/userController.js'
+import express from 'express'
+
 const router = express.Router()
 
-router.get('/', userController.getAllUsers)
-
-router.post('/', userController.createUser)
+router.get('/', userController.getUserByUserName)
 
 export default router
